--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Студия</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&amp;family=Roboto:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,13 +15,13 @@
         <a href="#"><span>Web</span> Studio</a>
         <ul>
             <li>
-                Студия
+               <a href="">Студия</a>
             </li>
             <li>
-                Портфолио
+               <a href="">Портфолио</a>
             </li>
             <li>
-                Контакты
+               <a href="">Контакты</a>
             </li>
         </ul>
     </nav>
@@ -64,9 +64,9 @@
     <section>
 
         <h2>Чем мы занимаемся</h2>
-        <img src="./images/чем%20зан1.png" alt="img" width="370" >
-        <img src="./images/чем%20зан2%20(1).png" alt="img" width="370">
-        <img src="./images/чем%20зан3.png" alt="img" width="370">
+        <img src="./images/occupation1.png" alt="img" width="370" >
+        <img src="./images/occupation2.png" alt="img" width="370">
+        <img src="./images/occupation3.png" alt="img" width="370">
     </section>
     <!-- Наша команда -->
     <section>
@@ -74,22 +74,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/команда1.png"  alt="фото члена команды" width="270">
+                <img src="./images/team1.png"  alt="фото члена команды" width="270">
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/команда2.png" alt="фото члена команды" width="270" >
+                <img src="./images/team2.png" alt="фото члена команды" width="270" >
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                 <img src="./images/команда3.png" alt="фото члена команды" width="270" >
+                 <img src="./images/team3.png" alt="фото члена команды" width="270" >
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                 <img src="./images/команда4.png" alt="фото члена команды" width="270" >
+                 <img src="./images/team4.png" alt="фото члена команды" width="270" >
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
@@ -109,8 +109,6 @@
         </li>
         </ul>
     </address>
-
-
 
 </footer>
 
