--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -12,47 +12,49 @@
 <!--шапка -->
 <header>
     <nav>
-        <a href="#"><span>Web</span> Studio</a>
+        <a href="#" lang="en"><span>Web</span>Studio</a>
         <ul>
             <li>
-               <a href="">Студия</a>
+                <a href="">Студия</a>
             </li>
             <li>
-               <a href="">Портфолио</a>
+                <a href="">Портфолио</a>
             </li>
             <li>
-               <a href="">Контакты</a>
+                <a href="">Контакты</a>
             </li>
         </ul>
     </nav>
-        <!-- контакты -->
-        <ul>
-          <li> <a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-          <li> <a href="tel:+38 096 111 11 11"> +38 096 111 11 11</a> </li>
-        </ul>
+    <!-- контакты -->
+    <ul>
+        <li> <a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
+        <li> <a href="tel:+38 096 111 11 11"> +38 096 111 11 11</a> </li>
+    </ul>
 
 </header>
 <main>
     <!-- Эффективные решения для вашего бизнеса -->
     <section>
 
-    <h1>Эффективные решения для вашего бизнеса</h1>
+        <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
     </section>
-    <!-- Переваги -->
+
     <section>
-    <!-- Переваги -->
-        <h2></h2>
+        <!-- Особенности -->
+        <h2 hidden="" >Особенности</h2>
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li><h3>Пунктуальность</h3>
+            <li>
+                <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li><h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <li>
+                <h3>Планирование</h3>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
                 <h3>Современные технологии</h3>
@@ -64,9 +66,17 @@
     <section>
 
         <h2>Чем мы занимаемся</h2>
-        <img src="./images/occupation1.png" alt="img" width="370" >
-        <img src="./images/occupation2.png" alt="img" width="370">
-        <img src="./images/occupation3.png" alt="img" width="370">
+        <ul>
+            <li>
+                <img src="./images/occupation1.jpeg" alt="Десктопные приложения" width="370" >
+            </li>
+            <li>
+                <img src="./images/occupation2.jpeg" alt="Мобильные приложения" width="370">
+            </li>
+            <li>
+                <img src="./images/occupation3.jpeg" alt="Дизайнерские решения" width="370">
+            </li>
+        </ul>
     </section>
     <!-- Наша команда -->
     <section>
@@ -74,39 +84,41 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/team1.png"  alt="фото члена команды" width="270">
+                <img src="./images/team1.jpeg"  alt="Product Designer" width="270">
                 <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <p lang="en">Product Designer</p>
             </li>
             <li>
-                <img src="./images/team2.png" alt="фото члена команды" width="270" >
+                <img src="./images/team2.jpeg" alt="Frontend Developer" width="270" >
                 <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                <p lang="en">Frontend Developer</p>
             </li>
             <li>
-                 <img src="./images/team3.png" alt="фото члена команды" width="270" >
+                <img src="./images/team3.jpeg" alt="Marketing" width="270" >
                 <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
+                <p lang="en">Marketing</p>
             </li>
             <li>
-                 <img src="./images/team4.png" alt="фото члена команды" width="270" >
+                <img src="./images/team4.jpeg" alt="UI Designer" width="270" >
                 <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <p lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
 </main>
 <footer>
-    <a href="#"><span>Web</span> Studio</a>
+    <a href="#" lang="en"><span>Web</span>Studio</a>
     <address>
         <ul>
             <li>
                 <a>г. Киев, пр-т Леси Украинки, 26</a>
-            </li><li>
-            <a  href="mailto:info@example.com">info@example.com</a>
-        </li><li>
-            <a  href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
-        </li>
+            </li>
+            <li>
+                <a  href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li>
+                <a  href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+            </li>
         </ul>
     </address>
 
